#
# Copyright (C) 2021 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(runtime)
add_subdirectory(cli)
add_subdirectory(offline_compiler)
add_subdirectory(fp_types)
add_subdirectory(logging)
add_subdirectory(random)
add_subdirectory(vector)
add_subdirectory(utility)
add_subdirectory(system)
add_subdirectory(test_harness)
add_subdirectory(catch2_utils)
add_subdirectory(reference)

add_subdirectory(main)
