#
# Copyright (C) 2021 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(cm_alu)
add_subdirectory(cm_atan2)
add_subdirectory(cm_dp)
add_subdirectory(cm_dp4a)
add_subdirectory(cm_inline_assembly)
add_subdirectory(cm_math)
add_subdirectory(cm_media_block_io)
add_subdirectory(cm_sampler)
