#
# Copyright (C) 2021-2022 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(cm_alu)
add_subdirectory(cm_atan2)
add_subdirectory(cm_bfn)
add_subdirectory(cm_convert)
add_subdirectory(cm_dp)
add_subdirectory(cm_dp4a)
add_subdirectory(cm_inline_assembly)
add_subdirectory(cm_math)
add_subdirectory(cm_media_block_io)
add_subdirectory(cm_oword_rw)
add_subdirectory(cm_sampler)
add_subdirectory(cm_scaled_scattered_rw)
add_subdirectory(cm_stochastic_rounding)
add_subdirectory(cm_svm_block_rw)
add_subdirectory(cm_svm_scattered_rw)
add_subdirectory(cm_typed_surface_rw)
