#
# Copyright (C) 2021 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(oclc_access_qualifiers)
add_subdirectory(oclc_address_space_qualifier_functions)
add_subdirectory(oclc_address_space_qualifiers)
add_subdirectory(oclc_async_copy_functions)
add_subdirectory(oclc_atomics)
add_subdirectory(oclc_attribute_qualifiers)
add_subdirectory(oclc_common_functions)
add_subdirectory(oclc_conversions)
add_subdirectory(oclc_data_types)
add_subdirectory(oclc_dynamic_linking)
add_subdirectory(oclc_function_qualifiers)
add_subdirectory(oclc_geometric_functions)
add_subdirectory(oclc_image_read_write_functions)
add_subdirectory(oclc_integer_functions)
add_subdirectory(oclc_math_functions)
add_subdirectory(oclc_miscellaneous_vector_functions)
add_subdirectory(oclc_operators)
add_subdirectory(oclc_preprocessor_directives_and_macros)
add_subdirectory(oclc_printf)
add_subdirectory(oclc_relational_functions)
add_subdirectory(oclc_storage_class_specifiers)
add_subdirectory(oclc_sub_group_functions)
add_subdirectory(oclc_vector_load_store_functions)
add_subdirectory(oclc_work_group_functions)
add_subdirectory(oclc_work_item_functions)
